--- a/source/index.html
+++ b/source/index.html
@@ -424,8 +424,10 @@
     <button class="success__close" aria-label="Закрыть окно"></button>
   </div>
 </div>
+<button class="to_top" type="button" aria-label="прокрутка вверх"></button>
 <script src="js/modal.min.js"></script>
 <script src="js/tabs.min.js"></script>
 <script src="js/menu.min.js"></script>
+<script src="js/scroll.min.js"></script>
 </body>
 </html>
